# cargo_value_scanner

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md  TODO.md  build.rs
.github/workflows/: rust.yml
assets/: main.css  tailwind.css
src/: app.rs  main.rs
src/domain/: app_state.rs  entities.rs  evaluation.rs  mod.rs  trade_route.rs
src/infra/: cache.rs  config.rs  mod.rs  uex.rs
src/ui/: mod.rs  shell.rs  theme.rs
src/ui/components/: cargo_table.rs  confidence_badge.rs  kpi_card.rs  mod.rs  price_table.rs  profit_indicator.rs  toast.rs
src/ui/pages/: best_price.rs  cargo.rs  mod.rs  planner.rs  profile_select.rs  routes.rs  settings.rs
src/util/: assets.rs  mod.rs  persistence.rs  version.rs
