[package]
name = "cargo_value_scanner"
version = "0.0.6"
authors = ["SetScallywag"]
edition = "2021"
description = "Desktop companion app for Star Citizen traders to evaluate cargo routes."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/skynatbs/cargo_value_scanner"
repository = "https://github.com/skynatbs/cargo_value_scanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0", features = ["router"] }
dioxus-desktop = { version = "0.7.0", optional = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time"] }
time = { version = "0.3", features = ["parsing", "formatting"] }
url = "2.5"
uuid = { version = "1.10", features = ["v4"] }
directories = "5.0"
rust-embed = "8.9.0"
semver = "1.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop", "dioxus-desktop"]
mobile = ["dioxus/mobile"]
